fix bug reserve now not showing in banner

--- a/wp-content/themes/ic/css/custom.css
+++ b/wp-content/themes/ic/css/custom.css
@@ -469,7 +469,6 @@ color: #333;
     text-align: center;
     top: 80%;
     width: 100%;
-    z-index: -1;
 }
 
 /* ======================================================== SECTIONS =====================================================  */
